--- a/Android/app/app/src/main/res/layout/activity_patient_health_metrics.xml
+++ b/Android/app/app/src/main/res/layout/activity_patient_health_metrics.xml
@@ -43,7 +43,7 @@
                 app:layout_constraintVertical_bias="0.0" />
 
             <ImageView
-                android:id="@+id/imageView2"
+                android:id="@+id/imageView_back"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="24dp"
