--- a/Android/app/app/src/main/res/layout/activity_register.xml
+++ b/Android/app/app/src/main/res/layout/activity_register.xml
@@ -204,6 +204,7 @@
             android:layout_marginBottom="16dp"
             android:clickable="true"
             android:focusable="true"
+            android:background="?attr/selectableItemBackground"
             android:text="Already have an account? Login here"
             android:textColor="@color/dark_blue"
             app:layout_constraintBottom_toBottomOf="parent"
