--- a/Android/app/app/src/main/res/values/colors.xml
+++ b/Android/app/app/src/main/res/values/colors.xml
@@ -14,4 +14,13 @@
     <color name="red_variant">#F44336</color>
     <color name="green">#4CAF50</color>
     <color name="green_variant">#4CAF50</color>
+
+    <!-- Additional colors for login screen -->
+    <color name="text_primary">#333333</color>
+    <color name="text_secondary">#666666</color>
+    <color name="icon_tint">#32357a</color>
+    <color name="accent_color">#32357a</color>
+    <color name="divider_color">#E0E0E0</color>
+    <color name="button_text_color">#FFFFFF</color>
+    <color name="social_button_background">#F5F5F5</color>
 </resources>
