--- a/Android/app/app/src/main/res/layout/activity_notifications.xml
+++ b/Android/app/app/src/main/res/layout/activity_notifications.xml
@@ -42,5 +42,18 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:menu="@menu/bottom_nav_menu" />
+
+    <TextView
+        android:id="@+id/textView6"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Thông báo "
+        android:textColor="@color/button_text_color"
+        android:textSize="20sp"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toBottomOf="@+id/toolbar_notifications"
+        app:layout_constraintEnd_toEndOf="@+id/toolbar_notifications"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/toolbar_notifications" />
 </androidx.constraintlayout.widget.ConstraintLayout>
 
