--- a/Android/app/app/src/main/res/layout/activity_main.xml
+++ b/Android/app/app/src/main/res/layout/activity_main.xml
@@ -266,7 +266,7 @@
                                     android:id="@+id/healthText"
                                     android:layout_width="match_parent"
                                     android:layout_height="wrap_content"
-                                    android:text="Chuẩn đoán\nsức khỏe"
+                                    android:text="Phân tích\nsức khỏe"
                                     android:textAlignment="center"
                                     android:textColor="@color/dark_blue"
                                     android:textSize="16sp"
