--- a/Android/app/app/src/main/res/layout/activity_notifications.xml
+++ b/Android/app/app/src/main/res/layout/activity_notifications.xml
@@ -57,7 +57,8 @@
                 android:layout_marginStart="16dp"
                 android:text="Thông báo cũ:"
                 android:textColor="@color/black"
-                android:textSize="16sp" />
+                android:textSize="16sp"
+                android:textStyle="bold" />
 
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/recycler_view_notifications"
