--- a/Android/app/app/src/main/res/layout/bottom_sheet_appointment_detail.xml
+++ b/Android/app/app/src/main/res/layout/bottom_sheet_appointment_detail.xml
@@ -338,6 +338,12 @@
             </androidx.cardview.widget.CardView>
 
             <!-- Action Buttons -->
+            <TextView
+                android:id="@+id/textView_thoigiandat"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Thời gian đặt:" />
+
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
